[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lora-training-pipeline"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["toml", "rich"]

[project.scripts]
lora-train = "lora_training_pipeline.cli:main"

[tool.setuptools.packages.find]
include = ["lora_training_pipeline*"]
exclude = ["configs*", "docs*", "scripts*", "venv*"]